add mapstruct, roomsDto and roomsService